--- a/priv_Ansible2/ansible.cfg
+++ b/priv_Ansible2/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
-inventory= ./inventory.1
-private_key_file= ./my-key.pem
+inventory= ./inventory
+private_key_file= ~/.ssh/my-key.pem
 remote_user= ubuntu
 host_key_checking= False
 
